<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>uk.gov.companieshouse</groupId>
        <artifactId>companies-house-parent</artifactId>
        <version>2.1.12</version>
        <relativePath/>
    </parent>

	<artifactId>item-group-status-updater</artifactId>
	<version>unversioned</version>
	<name>item-group-status-updater</name>
	<description>Rest API to update item group workflow status requests.</description>
	<packaging>jar</packaging>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<spring-boot-dependencies.version>3.5.3</spring-boot-dependencies.version>
		<start-class>uk.gov.companieshouse.itemgroupstatusupdater.ItemGroupStatusUpdaterApplication</start-class>

		<!-- Docker -->
		<jib-maven-plugin.version>3.4.6</jib-maven-plugin.version>

		<spring-boot-maven-plugin.version>3.5.3</spring-boot-maven-plugin.version>
		<sonar-maven-plugin.version>5.1.0.4751</sonar-maven-plugin.version>
		<sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
		<!--suppress UnresolvedMavenProperty -->
		<sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
		<sonar.login></sonar.login>
		<sonar.password></sonar.password>
		<sonar.projectKey>uk.gov.companieshouse:item-group-status-updater</sonar.projectKey>
		<sonar.projectName>item-group-status-updater</sonar.projectName>
		<maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
		<!-- Structured logging -->
		<structured-logging.version>3.0.34</structured-logging.version>
		<api-sdk-manager-java-library.version>3.0.7</api-sdk-manager-java-library.version>
		<system-lambda.version>1.2.1</system-lambda.version>
		<spring-cloud-contract-wiremock.version>4.3.0</spring-cloud-contract-wiremock.version>

		<test-containers.version>1.21.3</test-containers.version>
		<kafka-models.version>3.0.18</kafka-models.version>
		<ch-kafka.version>3.0.3</ch-kafka.version>
		<handlebars.version>4.4.0</handlebars.version>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.integration.tests>false</skip.integration.tests>
		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml,
			${project.basedir}/target/site/jacoco-it/jacoco.xml
		</sonar.coverage.jacoco.xmlReportPaths>
		<sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
		<mokito-core.version>5.18.0</mokito-core.version>
		<mokito-inline.version>5.2.0</mokito-inline.version>
		<avro.version>1.12.0</avro.version>
		<opentelemetry-version>2.14.0</opentelemetry-version>

		<argLine>
			--add-opens java.base/java.util=ALL-UNNAMED
			--add-opens java.base/java.lang=ALL-UNNAMED
		</argLine>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.opentelemetry.instrumentation</groupId>
				<artifactId>opentelemetry-instrumentation-bom</artifactId>
				<version>${opentelemetry-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot-dependencies.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-bom</artifactId>
				<version>${test-containers.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-to-slf4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.avro</groupId>
			<artifactId>avro</artifactId>
			<version>${avro.version}</version>
		</dependency>


		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>api-sdk-manager-java-library</artifactId>
			<version>${api-sdk-manager-java-library.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-beanutils</groupId>
					<artifactId>commons-beanutils</artifactId>
				</exclusion>
			</exclusions>
		</dependency>



		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>kafka-models</artifactId>
			<version>${kafka-models.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>ch-kafka</artifactId>
			<version>${ch-kafka.version}</version>
			<exclusions>
			<exclusion>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
			</exclusion>
			</exclusions>
		</dependency>

		<!-- Structured logging -->
		<dependency>
			<groupId>uk.gov.companieshouse</groupId>
			<artifactId>structured-logging</artifactId>
			<version>${structured-logging.version}</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.module</groupId>
					<artifactId>jackson-module-scala_2.13</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.pcollections</groupId>
					<artifactId>pcollections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>kafka</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mokito-core.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>${mokito-core.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>${mokito-inline.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-commons</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.stefanbirkner</groupId>
			<artifactId>system-lambda</artifactId>
			<version>${system-lambda.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-contract-wiremock</artifactId>
			<version>${spring-cloud-contract-wiremock.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.github.jknack</groupId>
			<artifactId>handlebars</artifactId>
			<version>${handlebars.version}</version>
			<scope>test</scope>
		</dependency>

		<!--AspectJ Dependencies-->
		<dependency>
			<artifactId>aspectjrt</artifactId>
			<groupId>org.aspectj</groupId>
		</dependency>

		<dependency>
			<artifactId>aspectjtools</artifactId>
			<groupId>org.aspectj</groupId>
		</dependency>
		<dependency>
			<groupId>io.opentelemetry.instrumentation</groupId>
			<artifactId>opentelemetry-spring-boot-starter</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot-maven-plugin.version}</version>
				<configuration>
					<mainClass>${start-class}</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<!--<skipTests>${skipTests}</skipTests>-->
					<excludes>
						<exclude>**/Runner.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${sonar-maven-plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>${jib-maven-plugin.version}</version>
				<configuration>
					<container>
						<expandClasspathDependencies>true</expandClasspathDependencies>
					</container>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution model. -->
							<destFile>${sonar.jacoco.reports}/jacoco.exec</destFile>
							<propertyName>surefireArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${sonar.jacoco.reports}/jacoco.exec</dataFile>
							<outputDirectory>${sonar.jacoco.reports}/jacoco</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>pre-integration-test</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->
							<destFile>target/jacoco-it.exec</destFile>
							<propertyName>failsafeArgLine</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-integration-test</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<!-- Sets the path to the file which contains the execution data. -->
							<dataFile>target/jacoco-it.exec</dataFile>
							<!-- Sets the output directory for the code coverage report. -->
							<outputDirectory>${sonar.jacoco.reports}/jacoco-it</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>${jib-maven-plugin.version}</version>
				<configuration>
					<from>
						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/ci-corretto-build-21:latest</image>
					</from>
					<to>
						<image>416670754337.dkr.ecr.eu-west-2.amazonaws.com/item-group-status-updater:latest</image>
					</to>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>